# SlicerPySERA

./: CMakeLists.txt  LICENSE  README.md  gitattributes
Data/ct_radiomics_phantom/: LICENSE.md  README.md
PySERA/: CMakeLists.txt  PySera.py  parameters.json
PySERA/PySeraCLI/: CMakeLists.txt  PySeraCLI.xml  PySeraCLIModule.py
PySERA/PySeraCLI/pysera_cli_lib/: parameters.yaml
PySERA/PySera_Ext/: CMakeLists.txt  PySera.py
PySERA/PySera_Ext/pysera_lib/: __init__.py  parameters.yaml  version.py
PySeraCLI/: CMakeLists.txt  PySeraCLI.xml  PySeraCLIModule.py
PySeraQt/: CMakeLists.txt  PySeraQt.py  PySeraQt.ui
PySera_Ext/: CMakeLists.txt  PySera.py
SlicerPySERA/PySera_Ext/: CMakeLists.txt  PySera.py
pysera_lib/: __init__.py  parameters.json  parameters.yaml  version.py
